# MiniRockets

./: .gitignore  Avionics-code.code-workspace  CODE_OF_CONDUCT.md  KnowledgeTree.md  LICENSE  README.md  RFC_template.md  meetTheTeam.txt  readme.md.txt
.githooks/: pre-push
.github/workflows/: FlightCMPT.yml  FlightCMPT_QL.yml  building_test.yml  clang-format-check.yml  codeql.yml
Avionics_RX/: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  platformio.ini
Avionics_RX/include/: RFM95W.h
CPP_flight_computer_program/: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakeListsPrivate.txt  GETTING_STARTED.md  Makefile  PREFLIGHT_CHECKLIST.md  STYLEGUIDE.md  TROUBLESHOOTING.md  _to_sd_card(DATALOG, datalog_fmt_header);  commit.sh  compile_commands.json  framtestsim  output.csv  platformio.ini  serialdump  todo
CPP_flight_computer_program/rusty_fram_wrapper/: Cargo.toml  MEMORY_DESIGN.md  Makefile
CPP_flight_computer_program/rusty_fram_wrapper/src/: lib.rs
Flight-code/: flight.c
Flight_Computer_Template/: KX134.ino  LED.ino  MPU-6050_Mod.ino  MPU6050.cpp  Tester.cpp  flight_computer_template.ino  passive_module.ino  temperature_NTC.ino
Links/: KnowledgeTree.md  uwaterloo_gitTutorial.md
New_Project_4/: avionicsboard.b#1  avionicsboard.b#2  avionicsboard.b#6  avionicsboard.b#7  eagle.epf
Templates/: RFC_template.md
flight_computer_program/: MS5611.ino  MicroSD.ino  bno055.ino  flight_computer_program.ino  kx134.ino  passive_module.ino  pitches.h
stopNamingThingsUntitledOrNewProjectInsertNumberHere/: avionicsboard.b#5
(+371 files in other folders)
