[package]
name = "rusty_fram_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# libc = "0.2.135"
# no-panic = "0.1.16"  # useless when used with panic-abort
panic-halt = "0.2.0" 

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1